NC redistribution final
