# mfdc-nc/docs/swagger.yaml
@@ -126,6 +126,8 @@ definitions:
         items:
           $ref: '#/definitions/model.NumberLogs'
         type: array
+      moved_at:
+        type: string
       number:
         description: Номер телефона
         type: string
@@ -204,15 +206,21 @@ definitions:
     type: object
   model.PoolRedistribution:
     properties:
+      dst_subpools_count:
+        type: integer
+      dst_team_id:
+        type: integer
+      dst_vendor_id:
+        type: integer
       from_pool_id:
         type: integer
       move_count_numbers:
         type: integer
-      team_id:
+      src_subpools_count:
+        type: integer
+      src_vendor_id:
         type: integer
       to_pool_id:
-        type: integer
-      vendor_id:
         type: integer
     type: object
   model.Reload:
